--- a/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
+++ b/src/app/components/admin/list-schedule-admin/list-schedule-admin.component.html
@@ -32,7 +32,9 @@
     <span *ngIf="isLoad">
       <ng-container *ngIf="showFullCalendar; then thenTemplate; else elseTemplate"></ng-container>
       <ng-template #thenTemplate>
-        <app-general-calendar [year]="year" [month]="monthNumber" [schedules]="schedule" (calendarSelect)="calendarSelect($event)"></app-general-calendar>
+        <!-- calendario general -->
+        <app-general-calendar [year]="year" [month]="monthNumber" [schedules]="schedule" (calendarSelect)="calendarSelect($event)"
+          (alertOfToday)="toastPresent()"></app-general-calendar>
       </ng-template>
       <ng-template #elseTemplate>
         <h2 *ngIf="isAll">Todos los Eventos</h2>
@@ -90,16 +92,14 @@
               <ion-icon slot="start" class="color-item-secondary" name="calendar"></ion-icon>
               <ion-label slot="start" text-wrap>
                 <p><b>Fecha del Evento:</b> </p>
-                <p>{{item.day}}/{{item.month}}/{{item.year}}</p>
+                <p>{{item.day}}/{{item.month + 1}}/{{item.year}}</p>
               </ion-label>
             </ion-item>
             <ion-item lines="none" *ngIf="item.day">
               <ion-icon slot="start" class="color-item-secondary" name="time"></ion-icon>
               <ion-label slot="start" text-wrap>
                 <p><b>Hora del Evento:</b> </p>
-                <p *ngIf="!item.minute">{{item.hour}}hrs</p>
-                <p *ngIf="item.minute < 10">{{item.hour}}:0{{item.minute}}</p>
-                <p *ngIf="item.minute >= 10">{{item.hour}}:{{item.minute}}</p>
+                <p>{{formatHours(item.hour,item.minute)}}</p>
               </ion-label>
             </ion-item>
             <!-- <ion-item lines="none" *ngIf="item.status">
@@ -121,8 +121,13 @@
             </ion-item>
           </ion-card-content>
           <ion-item lines="none">
-            <ion-button (click)="newEventById(item._id)" color="success" fill="outline" slot="end">
+            <ion-button *ngIf="!item.administrator" (click)="newEventById(item._id)" color="success" fill="outline"
+              slot="end">
               Editar <ion-icon name="create"></ion-icon>
+            </ion-button>
+            <ion-button *ngIf="item.administrator" (click)="editEventPersonalById(item._id)" color="success" fill="outline"
+              slot="end">
+              Editar Evento Personal <ion-icon name="create"></ion-icon>
             </ion-button>
             <ion-button (click)="presentAlertConfirm(item._id)" color="danger" fill="outline" slot="end">
               Borrar <ion-icon name="trash"></ion-icon>
