--- a/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
+++ b/src/app/components/buyer/credit-event-buyer/credit-event-buyer.component.html
@@ -118,10 +118,7 @@
             <ion-label text-wrap>Detalles de la cita : {{schedule.note}}</ion-label>
             <ion-list lines="none">
               <ion-item lines="none" text-wrap> Fecha: {{schedule.day}}/{{schedule.month}}/{{schedule.year}}</ion-item>
-              <ion-item *ngIf="schedule.minute < 10" lines="none" text-wrap>Hora:
-                {{schedule.hour}}:0{{schedule.minute}}</ion-item>
-              <ion-item *ngIf="schedule.minute >= 10" lines="none" text-wrap>Hora:
-                {{schedule.hour}}:{{schedule.minute}}</ion-item>
+              <ion-item lines="none" text-wrap>Hora: {{formatHours(schedule.hour, schedule.minute)}}</ion-item>
             </ion-list>
           </ion-card-content>
           <!-- Poner en notes Aceptado o Denagado -->
@@ -148,10 +145,7 @@
             <ion-label text-wrap>Detalles de la cita : {{schedule.note}}</ion-label>
             <ion-list lines="none">
               <ion-item lines="none" text-wrap> Fecha: {{schedule.day}}/{{schedule.month}}/{{schedule.year}}</ion-item>
-              <ion-item *ngIf="schedule.minute < 10" lines="none" text-wrap>Hora:
-                {{schedule.hour}}:0{{schedule.minute}}</ion-item>
-              <ion-item *ngIf="schedule.minute >= 10" lines="none" text-wrap>Hora:
-                {{schedule.hour}}:{{schedule.minute}}</ion-item>
+              <ion-item lines="none" text-wrap>Hora: {{formatHours(schedule.hour, schedule.minute)}} </ion-item>
             </ion-list>
           </ion-card-content>
           <!-- Poner en notes Aceptado o Denagado -->
