--- a/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
+++ b/src/app/components/buyer/event-detail-buyer/event-detail-buyer.component.html
@@ -51,10 +51,8 @@
           <ion-label text-wrap>Detalles de la cita : {{schedule.note}}</ion-label>
           <ion-list lines="none">
             <ion-item lines="none" text-wrap> Fecha: {{schedule.day}}/{{schedule.month + 1 }}/{{schedule.year}}</ion-item>
-            <ion-item *ngIf="schedule.minute < 10" lines="none" text-wrap>Hora:
-              {{schedule.hour}}:0{{schedule.minute}}</ion-item>
-            <ion-item *ngIf="schedule.minute >= 10" lines="none" text-wrap>Hora:
-              {{schedule.hour}}:{{schedule.minute}}</ion-item>
+            <ion-item lines="none" text-wrap>Hora: {{formatHours(schedule.hour,
+              schedule.minute)}}</ion-item>
           </ion-list>
         </ion-card-content>
         <ion-item lines="none">
@@ -71,8 +69,8 @@
       <span *ngIf="!schedule.status || schedule.status === 'amarillo'">
         <ion-card-header>
           <ion-card-subtitle>Cita: {{schedule.day}}/{{schedule.month}}/{{schedule.year}}</ion-card-subtitle>
-          <ion-card-subtitle *ngIf="schedule.minute < 10">Hora: {{schedule.hour}}:0{{schedule.minute}}</ion-card-subtitle>
-          <ion-card-subtitle *ngIf="schedule.minute >= 10">Hora: {{schedule.hour}}:{{schedule.minute}}</ion-card-subtitle>
+          <ion-card-subtitle lines="none" text-wrap>Hora: {{formatHours(schedule.hour,
+            schedule.minute)}}</ion-card-subtitle>
           <ion-card-title>{{schedule.property.name}}</ion-card-title>
         </ion-card-header>
 
