--- a/src/app/components/admin/detail-prop-admin/detail-prop-admin.component.html
+++ b/src/app/components/admin/detail-prop-admin/detail-prop-admin.component.html
@@ -173,3 +173,9 @@
   </ion-grid>
 
 </ion-content>
+<!-- fab placed to the bottom end -->
+<ion-fab vertical="bottom" horizontal="end" slot="fixed">
+  <ion-fab-button (click)="presentAlertCheckbox()" color="secondary">
+    <ion-icon name="person-add"></ion-icon>
+  </ion-fab-button>
+</ion-fab>
