--- a/src/app/components/buyer/new-buyer/new-buyer.component.scss
+++ b/src/app/components/buyer/new-buyer/new-buyer.component.scss
@@ -1,3 +1,24 @@
 .margin-field {
     margin-top: 20px;
 }
+
+.flex-container {
+    /* display: flex;
+    flex-direction: column;
+    padding: 5%; */
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    padding: 5%;
+}
+
+.flex-container>* {
+    width: 50%;
+    padding: 1%;
+}
+
+@media (max-width: 900px) {
+    .flex-container>* {
+        width: 100%;
+    }
+}
