--- a/src/app/components/general/general-calendar/general-calendar.component.scss
+++ b/src/app/components/general/general-calendar/general-calendar.component.scss
@@ -1,93 +1,95 @@
-.row-number-day {
-    padding: 15px !important;
-    text-align: left !important;
-    border-bottom: 1px solid #ddd;
-    vertical-align: top;
-}
+#calendar {
+    .row-number-day {
+        padding: 15px !important;
+        text-align: left !important;
+        border-bottom: 1px solid #ddd;
+        vertical-align: top;
+    }
 
-.row-name-day {
-    padding: 2px 15px 15px 0px !important;
-    height: 10px;
-    text-align: left !important;
-    border-bottom: 2px solid #ffb251;
-    vertical-align: top;
-}
+    .row-name-day {
+        padding: 2px 15px 15px 0px !important;
+        height: 10px;
+        text-align: left !important;
+        border-bottom: 2px solid #ffb251;
+        vertical-align: top;
+    }
 
-.row-number-day2 {
-    padding: 15px 0px !important;
-    text-align: left !important;
-    border-bottom: 1px solid #ddd;
-    vertical-align: top;
-    width: 15%;
-}
+    .row-number-day2 {
+        padding: 15px 0px !important;
+        text-align: left !important;
+        border-bottom: 1px solid #ddd;
+        vertical-align: top;
+        width: 15%;
+    }
 
-.current-day {
-    background-color: #ffb251;
-    border-radius: 9px;
-    // text-align: center
-    width: fit-content;
-}
+    .current-day {
+        background-color: #ffb251;
+        border-radius: 9px;
+        // text-align: center
+        width: fit-content;
+    }
 
-.calendar-tool-background {}
+    .calendar-tool-background {}
 
-.calendar-table {
-    width: 100%;
-    height: 100%;
-}
+    .calendar-table {
+        width: 100%;
+        height: 100%;
+    }
 
-td {
-    border-bottom: 1px solid #ddd;
-    vertical-align: top;
-}
+    td {
+        border-bottom: 1px solid #ddd;
+        vertical-align: top;
+    }
 
-td:hover {
-    background-color: #f5f5f5;
-}
+    td:hover {
+        background-color: #f5f5f5;
+    }
 
-.event-of-day {
-    background-color: #ffe9cc;
-    border-left: 5px solid #FFB251;
-    border-radius: 7%;
-    margin-bottom: 4%;
-    font-size: small;
-}
+    .event-of-day {
+        background-color: #ffe9cc;
+        border-left: 5px solid #FFB251;
+        border-radius: 7%;
+        margin-bottom: 4%;
+        font-size: small;
+    }
 
-.event-of-day-gris {
-    background-color: #aab4bd;
-    border-left: 5px solid #47525d;
-    border-radius: 7%;
-    margin-bottom: 4%;
-    font-size: small;
-}
+    .event-of-day-gris {
+        background-color: #aab4bd;
+        border-left: 5px solid #47525d;
+        border-radius: 7%;
+        margin-bottom: 4%;
+        font-size: small;
+    }
 
-.event-of-day-verde {
-    background-color: #c3f7d7;
-    border-left: 5px solid var(--ion-color-success);
-    border-radius: 7%;
-    margin-bottom: 4%;
-    font-size: small;
-}
+    .event-of-day-verde {
+        background-color: #c3f7d7;
+        border-left: 5px solid var(--ion-color-success);
+        border-radius: 7%;
+        margin-bottom: 4%;
+        font-size: small;
+    }
 
-.event-of-day-amarillo {
-    background-color: #f7f3e2;
-    border-left: 5px solid var(--ion-color-warning);
-    border-radius: 7%;
-    margin-bottom: 4%;
-    font-size: small;
-}
+    .event-of-day-amarillo {
+        background-color: #f7f3e2;
+        border-left: 5px solid var(--ion-color-warning);
+        border-radius: 7%;
+        margin-bottom: 4%;
+        font-size: small;
+    }
 
-.event-of-day-rojo {
-    background-color: #f1b9b9;
-    border-left: 5px solid var(--ion-color-danger);
-    border-radius: 7%;
-    margin-bottom: 4%;
-    font-size: small;
-}
+    .event-of-day-rojo {
+        background-color: #f1b9b9;
+        border-left: 5px solid var(--ion-color-danger);
+        border-radius: 7%;
+        margin-bottom: 4%;
+        font-size: small;
+    }
 
-.event-of-day-azul {
-    background-color: #9bd6fb;
-    border-left: 5px solid var(--ion-color-blue);
-    border-radius: 7%;
-    margin-bottom: 4%;
-    font-size: small;
+    .event-of-day-azul {
+        background-color: #9bd6fb;
+        border-left: 5px solid var(--ion-color-blue);
+        border-radius: 7%;
+        margin-bottom: 4%;
+        font-size: small;
+    }
 }
