--- a/src/app/components/general/goal-progress/goal-progress.component.html
+++ b/src/app/components/general/goal-progress/goal-progress.component.html
@@ -1,2 +1,3 @@
 <circle-progress [percent]="percent" [radius]="150" [outerStrokeWidth]="16" [innerStrokeWidth]="8" [outerStrokeColor]="'#78C000'"
-  [outerStrokeColor]="outerStrokeColor" [animation]="true" [subtitle]="subtitle" [animationDuration]="animationDuration"></circle-progress>
+  [outerStrokeColor]="outerStrokeColor" [animation]="true" [subtitle]="subtitle" [animationDuration]="animationDuration"
+  [titleFontSize]="titleFontSize" [unitsFontSize]="unitsFontSize" [subtitleFontSize]="subtitleFontSize"></circle-progress>
