--- a/src/theme/general-theme.scss
+++ b/src/theme/general-theme.scss
@@ -5,84 +5,74 @@
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
 @include mat-core();
-$md-bricks: (
-  50: #e0e0e0,
-  100: #b3b3b3,
-  200: #808080,
-  300: #4d4d4d,
-  400: #262626,
-  500: #000000,
-  600: #000000,
-  700: #000000,
-  800: #000000,
-  900: #000000,
-  A100: #a6a6a6,
-  A200: #8c8c8c,
-  A400: #737373,
-  A700: #666666,
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #ffffff,
-    400: #ffffff,
-    500: #ffffff,
-    600: #ffffff,
-    700: #ffffff,
-    800: #ffffff,
-    900: #ffffff,
-    A100: #000000,
-    A200: #000000,
-    A400: #ffffff,
-    A700: #ffffff
-  )
-);
-$md-bricks-second: (
-  50: #fef0e4,
-  100: #fcd9bc,
-  200: #fac08f,
-  300: #f8a762,
-  400: #f79440,
-  500: #f5811e,
-  600: #f4791a,
-  700: #f26e16,
-  800: #f06412,
-  900: #ee510a,
-  A100: #ffffff,
-  A200: #ffebe4,
-  A400: #ffc6b1,
-  A700: #ffb397,
-  contrast: (
-    50: #000000,
-    100: #000000,
-    200: #000000,
-    300: #000000,
-    400: #000000,
-    500: #000000,
-    600: #000000,
-    700: #000000,
-    800: #000000,
-    900: #ffffff,
-    A100: #000000,
-    A200: #000000,
-    A400: #000000,
-    A700: #000000
-  )
-);
+$md-bricks: (50: #e0e0e0,
+100: #b3b3b3,
+200: #808080,
+300: #4d4d4d,
+400: #262626,
+500: #000000,
+600: #000000,
+700: #000000,
+800: #000000,
+900: #000000,
+A100: #a6a6a6,
+A200: #8c8c8c,
+A400: #737373,
+A700: #666666,
+contrast: (50: #000000,
+100: #000000,
+200: #000000,
+300: #ffffff,
+400: #ffffff,
+500: #ffffff,
+600: #ffffff,
+700: #ffffff,
+800: #ffffff,
+900: #ffffff,
+A100: #000000,
+A200: #000000,
+A400: #ffffff,
+A700: #ffffff));
+$md-bricks-second: (50: #fef0e4,
+100: #fcd9bc,
+200: #fac08f,
+300: #f8a762,
+400: #f79440,
+500: #f5811e,
+600: #f4791a,
+700: #f26e16,
+800: #f06412,
+900: #ee510a,
+A100: #ffffff,
+A200: #ffebe4,
+A400: #ffc6b1,
+A700: #ffb397,
+contrast: (50: #000000,
+100: #000000,
+200: #000000,
+300: #000000,
+400: #000000,
+500: #000000,
+600: #000000,
+700: #000000,
+800: #000000,
+900: #ffffff,
+A100: #000000,
+A200: #000000,
+A400: #000000,
+A700: #000000));
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
 $candy-app-primary: mat-palette($md-bricks);
-$candy-app-accent: mat-palette($md-bricks);
+$candy-app-accent: mat-palette($md-bricks-second);
 // The warn palette is optional (defaults to red).
 $candy-app-warn: mat-palette($mat-red);
 $candy-app-acept: mat-palette($mat-green);
 // Create the theme object (a Sass map containing all of the palettes).
-$candy-app-theme: mat-light-theme(
-  $candy-app-primary,
-  $candy-app-accent,
-  $candy-app-warn
-);
+$candy-app-theme: mat-light-theme($candy-app-primary,
+$candy-app-accent,
+$candy-app-warn);
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
